<resources>
    <string name="app_name">BakingBuddy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="test_recipe_title">My Recipe Title</string>
    <string name="recipe_ingredients">Ingredients Go Here...</string>
    <string name="test_recipe_step">My Recipe Step</string>
    <string name="recipe_details_title">Recipe Details</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="step_description_title">Step Description</string>
    <string name="prev_title">Previous</string>
    <string name="next_title">Next</string>
    <string name="no_video_message">No Video Available...</string>



</resources>