<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/simple_exo_view"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/no_video_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/simple_exo_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/no_video_message"
            android:textColor="#ccc"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_video_tv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/step_description_title"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/test_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_title"
            android:layout_margin="10dp"
            android:text="@string/test_recipe_step"
            android:textColor="#000"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/prev_step_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:onClick="displayPreviousStep"
            android:text="@string/prev_title"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/next_step_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:onClick="displayNextStep"
            android:text="@string/next_title"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="italic" />
    </RelativeLayout>
</layout>