<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="#fff"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <!-- TODO: Remove after testing-->
    <TextView
        android:id="@+id/recipe_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ingredients_title"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_title"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/recipe_ingredients_tv"
        android:layout_below="@+id/ingredients_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredients"
        android:layout_margin="10dp"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/steps_title"
        android:layout_below="@+id/recipe_ingredients_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_title"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_step_descriptions_rv"
        android:layout_below="@+id/steps_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>